--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "alarm-web",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
+    "axios": "^1.7.9",
     "cra-template-pwa": "2.0.0",
     "gapi-script": "^1.2.0",
     "react": "^19.0.0",
